--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,5 @@
+<html>
+<p>
   _______        |                                                    
      |           |                                                    
      |           |                                                    
@@ -5,7 +7,8 @@
 ___  |  |     |  |    | |    |                                        
  |   |  |     |  |    | |    |                                        
  |___|  |_____|  |    | |    |                                        
-                                                                      
+</p>
+</html>                                                                      
                                                                       
                                                                       
                                                                       
