--- a/views/john.html
+++ b/views/john.html
@@ -1,13 +1,16 @@
 <html>
-<p>
-  _______        |                                                    
-     |           |                                                    
-     |           |                                                    
-     |   ______  |_____ |_____                                        
-___  |  |     |  |    | |    |                                        
- |   |  |     |  |    | |    |                                        
- |___|  |_____|  |    | |    |                                        
-</p>
+<body>
+<pre>	
+
+     ____.      .__            
+    |    | ____ |  |__   ____  
+    |    |/  _ \|  |  \ /    \ 
+/\__|    (  <_> )   Y  \   |  \
+\________|\____/|___|  /___|  /
+                     \/     \/ 
+
+</pre>
+</body>
 </html>                                                                      
                                                                       
                                                                       
